Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,3 +2,4 @@
 	inheritFrom = Maintained-Projects
 [access "refs/heads/*"]
 	owner = group boardfirmwaremaintainer
+	push = group boardfirmwaremaintainer
