Add power board firmware version 3
From sr2016.1 tag in power-v4-fw repo (d5968e4b106c).  Include the
binary that integrates the bootloader.

Change-Id: I58c16cca66d0d72d026df223a673f840db44e2b5

--- a/config.yaml
+++ b/config.yaml
@@ -2,8 +2,8 @@ power:
   name: power
   VID: 0x1bda
   PID: 0x0010
-  fw_path: ./pbv4_noboot.bin
-  fw_ver: 0
+  fw_path: ./pbv4_noboot-4.3.bin
+  fw_ver: 3
 
 servo:
   name: servo
