--- a/config.yaml
+++ b/config.yaml
@@ -9,5 +9,5 @@ servo:
   name: servo
   VID: 0x1bda
   PID: 0x0011
-  fw_path: ./sbv4_noboot.bin
-  fw_ver: 1
+  fw_path: ./sbv4_noboot-4.2.bin
+  fw_ver: 2
